<resources>
    <!-- Common -->
    <string name="app_name">SpeedRun</string>
    <string name="common_error">Oooops… Something went wrong</string>
    <string name="img_collapsed">collapsed</string>
    <string name="img_expanded">expanded</string>
    <string name="img_collapsing">collapsing</string>

    <!-- Splash -->
    <string name="splash_icon">SplashIcon</string>

    <!-- Game list -->
    <string name="item_game_img">ItemGameImage</string>

    <!-- Game Detail -->
    <string name="game_detail_img">gameDetailImg</string>
    <string name="game_detail_player_name">Player name</string>
    <string name="game_detail_run_time">Run time</string>
    <string name="game_detail_icon_img">GameDetailIcon</string>
    <string name="game_detail_video_img">VideoIcon</string>
    <string name="game_detail_no_info">-</string>

</resources>
