<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/runCardView"
        style="@style/CardViewCustomFlat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginTop="@dimen/margin10">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="@dimen/game_detail_logo_size"
                android:layout_height="@dimen/game_detail_logo_size"
                android:contentDescription="@string/game_detail_icon_img"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/playerNameTextView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/playerNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin5"
                android:text="@string/game_detail_player_name"
                android:textAppearance="@style/TextBrandonGrotesqueBold14.Black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

            <TextView
                android:id="@+id/playerNameValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin5"
                android:textAppearance="@style/TextBrandonGrotesqueRegular14.Black"
                android:text="@string/game_detail_no_info"
                app:layout_constraintBottom_toBottomOf="@+id/playerNameTextView"
                app:layout_constraintLeft_toRightOf="@+id/playerNameTextView"
                app:layout_constraintTop_toTopOf="@+id/playerNameTextView"
                tools:text="@sample/run.json/name" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin5"
                android:text="@string/game_detail_run_time"
                android:textAppearance="@style/TextBrandonGrotesqueBold14.Black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerNameTextView" />

            <TextView
                android:id="@+id/timeValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin5"
                android:text="@string/game_detail_no_info"
                android:textAppearance="@style/TextBrandonGrotesqueRegular14.Black"
                app:layout_constraintBottom_toBottomOf="@+id/timeTextView"
                app:layout_constraintLeft_toRightOf="@+id/timeTextView"
                app:layout_constraintTop_toTopOf="@+id/timeTextView"
                tools:text="@sample/run.json/time" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <ImageButton
        android:id="@+id/videoLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/game_detail_video_img"
        android:src="@drawable/youtube" />

</LinearLayout>
